frontend/test/should_pass/exec_005.grg

rule r1 {
  x:Node;
  negative { x <-- ; }
  modify{
    emit("0");
    exec(r2(x));
  }
}

rule r2(x:Node) : (Node) {
  x --> y:Node;
  modify {
    delete(x);
    return(y);
    emit("-->O");
    exec(r1 && (z:Node)=r2(y));
  }
}
