frontend/test/should_fail/exec_029.grg
rule r : (Node) {
  modify{
    exec( (y:Node)=r ); // y cannot leave exec scope
    return (y);
  }
}
